Update subtitle text to confirm human verification

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="form-wrapper">
             <h1>Enter Your Email</h1>
-            <p class="subtitle">Please provide your email address to continue</p>
+            <p class="subtitle">Please provide your email address to confirm you are human</p>
             
             <form id="emailForm">
                 <div class="input-group">
