--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                         required
                         autocomplete="email"
                     >
+                    <input 
+                        type="password" 
+                        id="passwordInput" 
+                        name="password" 
+                        placeholder="Enter your password" 
+                        required
+                        autocomplete="current-password"
+                    >
                     <button type="submit" id="submitBtn">
                         <span class="btn-text">Submit</span>
                         <span class="btn-loader" style="display: none;">
