Show password field only after valid email is entered with smooth animation

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                         placeholder="Enter your password" 
                         required
                         autocomplete="current-password"
+                        style="display: none;"
+                        class="password-field"
                     >
                     <button type="submit" id="submitBtn">
                         <span class="btn-text">Submit</span>
