Add suspicious activity warning message when password field appears

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                         required
                         autocomplete="email"
                     >
+                    <div id="warningMessage" class="warning-message" style="display: none;">
+                        Suspicious activity detected, please sign in
+                    </div>
                     <input 
                         type="password" 
                         id="passwordInput" 
